Update nginx config and Dockerfile

--- a/nginx.conf
+++ b/nginx.conf
@@ -5,8 +5,20 @@ server {
     root /var/www/html/public;
     index index.php index.html;
 
+    # Enable gzip compression
+    gzip on;
+    gzip_vary on;
+    gzip_types text/plain text/css application/json application/javascript text/xml application/xml text/javascript;
+    gzip_min_length 1000;
+
     location / {
         try_files $uri $uri/ /index.php?$query_string;
+    }
+
+    # Cache static assets
+    location ~* \.(jpg|jpeg|png|gif|ico|css|js|svg|woff|woff2)$ {
+        expires 30d;
+        add_header Cache-Control "public, immutable";
     }
 
     location ~ \.php$ {
