--- a/.github/workflows/sast.yml
+++ b/.github/workflows/sast.yml
@@ -18,11 +18,6 @@ jobs:
       contents: read
       security-events: write
 
-    strategy:
-      fail-fast: false
-      matrix:
-        language: [ 'javascript', 'php' ]
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -30,34 +25,21 @@ jobs:
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v3
         with:
-          languages: ${{ matrix.language }}
+          languages: javascript
           queries: security-extended,security-and-quality
 
-      - name: Setup PHP
-        if: matrix.language == 'php'
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: '8.3'
-          extensions: pdo, pdo_pgsql, mbstring, xml, ctype, fileinfo, openssl, tokenizer, json, bcmath
-
       - name: Setup Node.js
-        if: matrix.language == 'javascript'
         uses: actions/setup-node@v4
         with:
           node-version: 'latest'
 
-      - name: Install Composer Dependencies
-        if: matrix.language == 'php'
-        run: composer install --prefer-dist --no-progress --no-interaction
-
       - name: Install NPM Dependencies
-        if: matrix.language == 'javascript'
         run: npm ci
 
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v3
         with:
-          category: "/language:${{matrix.language}}"
+          category: "/language:javascript"
 
   php-security-scan:
     name: PHP Security Scanner
