added frontend build command

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,6 +62,9 @@ jobs:
 
       - name: Install NPM Dependencies
         run: npm ci
+      
+      - name: build frontend assets
+        run: npm run build
 
       - name: Generate Application Key
         run: php artisan key:generate
