--- a/nginx.conf
+++ b/nginx.conf
@@ -8,16 +8,24 @@ server {
     # Enable gzip compression
     gzip on;
     gzip_vary on;
-    gzip_types text/plain text/css application/json application/javascript text/xml application/xml text/javascript;
+    gzip_proxied any;
+    gzip_comp_level 6;
+    gzip_types text/plain text/css text/xml text/javascript application/javascript application/json application/xml application/xml+rss image/svg+xml;
     gzip_min_length 1000;
+    gzip_disable "msie6";
+
+    # Enable brotli compression if available
+    # brotli on;
+    # brotli_comp_level 6;
+    # brotli_types text/plain text/css text/xml text/javascript application/javascript application/json application/xml application/xml+rss image/svg+xml;
 
     location / {
         try_files $uri $uri/ /index.php?$query_string;
     }
 
-    # Cache static assets
-    location ~* \.(jpg|jpeg|png|gif|ico|css|js|svg|woff|woff2)$ {
-        expires 30d;
+    # Cache static assets for 1 year
+    location ~* \.(jpg|jpeg|png|gif|ico|css|js|svg|woff|woff2|json)$ {
+        expires 1y;
         add_header Cache-Control "public, immutable";
     }
 
