--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
         "dev": "vite"
     },
     "devDependencies": {
+        "@fullhuman/postcss-purgecss": "^7.0.2",
         "autoprefixer": "^10.4.20",
         "axios": "^1.7.4",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.47",
+        "purgecss": "^7.0.2",
         "tailwindcss": "^3.4.13",
         "vite": "^6.0"
     }
