--- a/.env.example
+++ b/.env.example
@@ -65,5 +65,6 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
 
-GOOGLE_ANALYTICS_ID=
-MICROSOFT_CLARITY_ID=
+RECAPTCHA_SITE_KEY=
+RECAPTCHA_SECRET_KEY=
+RECAPTCHA_SCORE_THRESHOLD=0.5
