--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "postcss": "^8.4.47",
         "purgecss": "^7.0.2",
         "tailwindcss": "^3.4.13",
+        "terser": "^5.44.1",
         "vite": "^6.0",
         "vite-plugin-pwa": "^1.1.0"
     }
